# sept2023

./: CMakeLists.txt  camera.cpp  camera.h  main.cpp  robot.cpp  robot.h  shader.cpp  shader.h
shaders/: simple_shader.fs  simple_shader.vs
